--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
             <version>4.7</version>
         </dependency>
         <dependency>
+            <groupId>org.eclipse.packagedrone</groupId>
+            <artifactId>org.eclipse.packagedrone.utils.rpm</artifactId>
+            <version>0.14.6</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.6.2</version>
