--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
             <version>4.7</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.20</version>
+        </dependency>
+        <dependency>
             <groupId>org.eclipse.packagedrone</groupId>
             <artifactId>org.eclipse.packagedrone.utils.rpm</artifactId>
             <version>0.14.6</version>
