--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>libs/</classpathPrefix>
                             <mainClass>
-                                com.suse.pase.Main
+                                com.suse.pase.cli.Main
                             </mainClass>
                         </manifest>
                     </archive>
@@ -69,6 +69,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+            <version>4.5.1</version>
+        </dependency>
+            <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
             <version>8.6.0</version>
