--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-scripts": "^5.0.1"
+    "codemirror": "^5.65.15",
+    "react": "^17.0.2",
+    "react-codemirror2": "^7.3.0",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
